[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Flag/flag.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Scripts/Flag/Flag.gd" type="Script" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 0.705201

[sub_resource type="SpatialMaterial" id=2]
params_cull_mode = 2
albedo_color = Color( 1, 0.145098, 0.145098, 1 )
roughness = 0.81

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.501961, 0.329412, 0.203922, 1 )
roughness = 0.66

[sub_resource type="SphereShape" id=4]
radius = 6.71601

[node name="Flag" type="Spatial"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 0, 0, 0 )
script = ExtResource( 2 )

[node name="WinHole" type="Area" parent="." groups=[
"Win",
]]

[node name="CollisionShape" type="CollisionShape" parent="WinHole"]
shape = SubResource( 1 )

[node name="Flag_Mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.202, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 2 )
material/1 = SubResource( 3 )

[node name="NearWin" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="NearWin"]
shape = SubResource( 4 )

[node name="FlagUp" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.16062, 0 )
[connection signal="body_entered" from="WinHole" to="." method="_on_WinHole_body_entered"]
[connection signal="body_entered" from="NearWin" to="." method="_on_NearWin_body_entered"]
[connection signal="body_exited" from="NearWin" to="." method="_on_NearWin_body_exited"]
